Parsoid: Fix aria-expanded attributes for section collapsing
Noticed while working on Bug: T38440 Bernard pointed out
that aria-expanded is set incorrectly. This adds some tests
to capture desired behaviour.

aria-expanded should be true only when section is expanded

Also use the aria-expanded attribute to determine whether
the edit icon should show when the section is collapsed.

Bug: T384401
Bug: T384408

--- a/resources/mobile.init.styles/editor.less
+++ b/resources/mobile.init.styles/editor.less
@@ -31,6 +31,18 @@
 	}
 }
 
+/** In parsoid */
+.mw-parser-output[ data-mw-parsoid-version ] {
+	/* hide edit buttons until expanded (T384408) */
+	.mw-editsection {
+		visibility: hidden;
+	}
+
+	[ aria-expanded='true' ] .mw-editsection {
+		visibility: visible;
+	}
+}
+
 .ve-loadbasiceditor {
 	text-align: center;
 	position: absolute;
